[package]
name = "oxipot"
version = "0.1.0"
edition = "2021"
authors = ["Pouriya Jamshidi"]
build = "build.rs"
incremental = true

[dependencies]
rusqlite = { version = "*", features = ["bundled"] }
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
chrono = "*"
signal-hook = "0.3.15"
