[package]
name = "oxipot"
version = "0.2.0"
edition = "2021"
authors = ["Pouriya Jamshidi"]
build = "build.rs"
incremental = true

[dependencies]
rusqlite = { version = "*", features = ["bundled"] }
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
chrono = "*"
time = "0.3.22"
signal-hook = "0.3.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
