[package]
name = "oxipot"
description = "Network honeypot to catch IT, OT, and IoT bots"
version = "0.3.0"
edition = "2021"
authors = ["Pouriya Jamshidi"]
build = "build.rs"
incremental = true
repository = "https://github.com/pouriyajamshidi/oxipot"
readme = "README.md"
keywords = ["honeypot", "network", "IT", "OT", "IoT"]
license = "Boost Software License"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
rusqlite = { version = "*", features = ["bundled"] }
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
chrono = "*"
signal-hook = "0.3.17"
